@@ -1,0 +1,9 @@
+Credits and contributors for driftnet
+$Id: CREDITS,v 1.1 2001/08/11 13:45:42 chris Exp $
+
+Thanks to the authors of EtherPEG, for a cool idea and to Eric Richardson,
+whose website brought it to my attention.
+
+Theo Honahan and Benjamin Ritcey assisted me in tracking down some bugs.
+Others certainly remain.
+
