@@ -1,5 +1,5 @@
 Changelog for driftnet
-$Id: CHANGES,v 1.2 2001/08/08 19:49:15 chris Exp $
+$Id: CHANGES,v 1.3 2001/08/11 13:45:42 chris Exp $
 
 0.1.3
 
@@ -9,6 +9,8 @@ Added command-line options for selecting interfaces, verbosity etc.
 
 Made window resizing neater (it now no longer results in erasing the contents
 of the window).
+
+Removed vestigial dependencies upon libpnm.
 
 0.1.2
 
